# EfficientGaze_Sreen

./: CMakeLists.txt.example  default.cfg
analysis/: error_statis.py  evaluate.py  gaze_data3.npy  gaze_data5.npy  pred_gt01.yml  pred_gt02.yml  pred_gt10.yml  pred_gt3.yml  pred_gt4.yml  pred_gt5.yml  pred_gt6.yml  pred_gt7.yml  pred_gt8.yml  pred_gt9.yml
calib/: calibration.yml  distortion.txt  matrix.txt  monitor_desktop.yml  monitor_laptop.yml  personal_gaze_model.yml
include/: data.hpp  face_detector.hpp  gaze_estimator.hpp  gaze_predictor.hpp  input_handler.hpp  normalizer.hpp  opengaze.hpp  personal_calibrator.hpp
model/: face.param  face_model copy.yml  face_model.yml  gaze_face.param  gaze_mpii_estimator.param
output/: gaze_data.npy  gaze_data1.npy  gaze_data2.npy  gaze_data4.npy  personal_gaze_model.yml  pred_gt.yml  pred_gt01.yml  pred_gt02.yml  pred_gt3.yml  pred_gt4.yml  pred_gt5.yml  pred_gt7.yml  混淆矩阵
src/: CMakeLists.txt  GazeVisualization.cpp  face_detector.cpp  gaze_estimator.cpp  gaze_predictor.cpp  input_handler.cpp  normalizer.cpp  opengaze.cpp  personal_calibrator.cpp
tools/: CMakeCache.txt  Makefile  cmake_install.cmake  faceDetector.onnx  faceDetector_sim.onnx  face_landmks.param  landmks.param  onnx.pb.cc  onnx.pb.h  onnx2ncnn  onnx2ncnn.cpp
